Fix fromSingleValues null handling and update stale test assertions
fromSingleValues now maps null values to "" to match the previous
Map<String,String> behaviour where null meant a valueless parameter.

RestUtilsTests.testReservedParameters updated to expect
BadParameterException (wrapping IllegalArgumentException) since
fromUri now wraps all parse errors in BadParameterException.